# ak-data

./: .gitignore  Cargo.toml  README.md
examples/: from_local.rs  from_remote.rs
src/: format.rs  game_data.rs  lib.rs  macros.rs  options.rs
src/format/: activity_table.rs  building_data.rs  character_meta_table.rs  character_table.rs  equip_table.rs  gacha_table.rs  handbook_info_table.rs  item_table.rs  range_table.rs  skill_table.rs  skin_table.rs
tests/: operator.rs
tests/samples/: durin_promotions.json  frostleaf_promotions.json  melantha_promotions.json
