[package]
name = "ak-data"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.13"
chrono = "0.4"
octocrab = "0.17"
once_cell = "1.15"
regex = "1.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1", features = ["macros"] }
uord = { git = "https://github.com/ScottyThePilot/misc-crates", features = ["serde"] }

[dev-dependencies]
tokio = { version = "1", features = ["rt", "rt-multi-thread", "fs", "macros"] }

[features]
default = []
